force-app/main/default/objects/SurveyResponse__c/SurveyResponse__c.object-meta.xml
<CustomObject>
    <description>Survey Response</description>
    <label>Survey Response</label>
    <nameField>
        <label>Survey Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>