force-app/main/default/objects/SurveyResponse__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign</description>
    <label>Campagna</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>SurveyResponses</relationshipName>
    <type>Lookup</type>
</CustomField>