force-app/main/default/objects/SurveyResponse__c/fields/Response17__c.field-meta.xml
<CustomField>
    <fullName>Response17__c</fullName>
    <label>Risposta 17</label>
    <length>255</length>
    <type>Text</type>
</CustomField>