force-app/main/default/objects/SurveyResponse__c/fields/Response18__c.field-meta.xml
<CustomField>
    <fullName>Response18__c</fullName>
    <label>Risposta 18</label>
    <length>255</length>
    <type>Text</type>
</CustomField>