force-app/main/default/objects/SurveyResponse__c/fields/Response19__c.field-meta.xml
<CustomField>
    <fullName>Response19__c</fullName>
    <label>Risposta 19</label>
    <length>255</length>
    <type>Text</type>
</CustomField>