force-app/main/default/objects/SurveyResponse__c/fields/SurveyCRM__c.field-meta.xml
<CustomField>
    <fullName>SurveyCRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Survey CRM</description>
    <label>Survey CRM</label>
    <referenceTo>SurveyCRM__c</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>SurveyResponses</relationshipName>
    <type>Lookup</type>
</CustomField>